// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (--format) > none > no existing frontmatter > creates the right title, when framework is none 1`] = `
"# no-foo

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > none > no existing frontmatter > creates the right title, when framework is none 2`] = `
"# no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > none > with existing frontmatter > ignores existing frontmatter, when framework is none 1`] = `
"---
title: No Foo
description: Description for no-foo.
---
# no-foo

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > none > with existing frontmatter > ignores existing frontmatter, when framework is none 2`] = `
"---
title: No Bar
description: Description for no-bar.
---
# no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > no existing frontmatter > creates frontmatter, when framework is starlight 1`] = `
"---
title: no-foo
description: Description for no-foo.
---

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > no existing frontmatter > creates frontmatter, when framework is starlight 2`] = `
"---
title: no-bar
---

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > with existing frontmatter > updates existing frontmatter, when both title and description are present 1`] = `
"---
title: no-foo
description: Description for no-foo.
---

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > with existing frontmatter > updates existing frontmatter, when both title and description are present 2`] = `
"---
title: no-bar
description: Description for no-bar.
---

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > with existing frontmatter > updates existing frontmatter, when neither title nor description is present 1`] = `
"---
title: no-foo
description: Description for no-foo.
tableOfContents:
  minHeadingLevel: 2
  maxHeadingLevel: 2
---

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > with existing frontmatter > updates existing frontmatter, when neither title nor description is present 2`] = `
"---
title: no-bar
template: splash
editUrl: false
hero:
  title: '404'
  tagline: Page not found. Check the URL or try using the search bar.
---

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > with existing frontmatter > updates existing frontmatter, when only description is present 1`] = `
"---
title: no-foo
tableOfContents:
  minHeadingLevel: 2
  maxHeadingLevel: 2
description: Description for no-foo.
---

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > with existing frontmatter > updates existing frontmatter, when only description is present 2`] = `
"---
title: no-bar
template: splash
editUrl: false
hero:
  title: '404'
  tagline: Page not found. Check the URL or try using the search bar.
description: A description for no-bar that will be ignored, because the rule has a new description in its meta.docs.description field.
---

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > with existing frontmatter > updates existing frontmatter, when only title is present 1`] = `
"---
tableOfContents:
  minHeadingLevel: 2
  maxHeadingLevel: 2
title: no-foo
description: Description for no-foo.
---

📝 Description for no-foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--format) > starlight > with existing frontmatter > updates existing frontmatter, when only title is present 2`] = `
"---
template: splash
editUrl: false
hero:
  title: '404'
  tagline: Page not found. Check the URL or try using the search bar.
title: no-bar
---

<!-- end auto-generated rule header -->
"
`;
